--- a/sb-init.org
+++ b/sb-init.org
@@ -808,10 +808,25 @@ The solution that I adopted is to use =guit-gui--askpass=, even if it does not i
 
 ** A_FAIRE Use ido when calling magit-status with a prefix argument
    :LOGBOOK:
+   CLOCK: [2016-09-23 Fri 08:25]--[2016-09-23 Fri 08:55] =>  0:30
    CLOCK: [2016-09-15 Thu 08:08]--[2016-09-15 Thu 08:25] =>  0:17
    :END:
 
-It seems that the =magit-read-repository= function uses =read-directory-name=.
+#+BEGIN_SRC emacs-lisp
+  (setq magit-completing-read-function (quote magit-ido-completing-read))
+#+END_SRC
+
+We further advise =magit-read-repository= to use =ido-read-directory-name= rather than =read-directory-name=... This does not work yet :'(
+
+#+BEGIN_SRC emacs-lisp
+  (defadvice magit-read-repository (around sb-magit-read-repository activate)
+    "Use `ido-read-directory-name' rather than `read-directory-name'."
+    (if (or read-directory-name (not magit-repository-directories))
+        (file-name-as-directory
+         (ido-read-directory-name "Git repository: "
+                                  (or (magit-toplevel) default-directory)))
+      ad-do-it))
+#+END_SRC
 
 * AUCTeX and RefTeX
   :LOGBOOK:
