Added header argument :results output silent.
This allows to execute block codes directly without altering the config file.

--- a/sb-init.org
+++ b/sb-init.org
@@ -2,7 +2,7 @@
 #+TITLE: My emacs configuration file
 #+AUTHOR: Sébastien Brisard
 #+CATEGORY: DOTEMACS
-#+PROPERTY: header-args:emacs-lisp :tangle yes
+#+PROPERTY: header-args:emacs-lisp :tangle yes :results output silent
 
 * Introduction
   :LOGBOOK:
