--- a/sb-init.org
+++ b/sb-init.org
@@ -760,6 +760,15 @@ From the [[https://magit.vc/about/][official website]]
 Magit is an interface to the version control system [[https://git-scm.com/][Git]], implemented as an [[https://www.gnu.org/software/emacs][Emacs]] package. Magit aspires to be a complete Git porcelain. While we cannot (yet) claim that Magit wraps and improves upon each and every Git command, it is complete enough to allow even experienced Git users to perform almost all of their daily version control tasks directly from within Emacs. While many fine Git clients exist, only Magit and Git itself deserve to be called porcelains.
 #+END_QUOTE
 
+This interesting video, [[https://www.youtube.com/watch?v%3DvQO7F2Q9DwA][Magit Introduction and Demonstration]] illustrates /rebasing/. The author recommends the following key binding
+
+#+BEGIN_SRC elisp :eval never :tangle no
+  (require 'magit)
+  (global-set-key (kbd "C-x g") 'magit-status)a
+#+END_SRC
+
+See also [[https://www.youtube.com/watch?v=mtliRYQd0j4&feature=youtu.be][Rewrite git history with Emacs, magit and git rebase]]. This [[https://www.reddit.com/r/emacs/comments/3w2yo8/magit_key_commands_changed/][reddit thread]] discusses the recent changes to magit.
+
 ** General configuration
 
 Git project should not be handled by =vc=
