--- a/sb-init.org
+++ b/sb-init.org
@@ -479,7 +479,7 @@ I use the [[https://github.com/bbatsov/zenburn-emacs][Zenburn theme]] when emacs
   (when (display-graphic-p) (load-theme 'zenburn t))
 #+END_SRC
 
-** A_FAIRE [#C] Frame size
+** A_FAIRE Frame size
    :LOGBOOK:
    CLOCK: [2016-09-15 Thu 07:26]--[2016-09-15 Thu 07:27] =>  0:01
    CLOCK: [2016-08-23 Tue 08:00]--[2016-08-23 Tue 08:10] =>  0:10
@@ -1165,7 +1165,7 @@ It may be useful to set some other =elpy= variables. Since their value is platfo
   (custom-add-to-group 'sb 'python-shell-interpreter-interactive-arg 'custom-variable)
 #+END_SRC
 
-*** A_FAIRE [#C] Should I use =sb-bind-newline-and-indent-to-RET=?
+*** A_FAIRE Should I use =sb-bind-newline-and-indent-to-RET=?
 
 ** Maxima
    :LOGBOOK:
