--- a/sb-init.org
+++ b/sb-init.org
@@ -425,18 +425,19 @@ Then select the desired font in the dialog that shows up. Copy the string that i
 #+END_SRC
 
 * Org Mode
-  :PROPERTIES:
-  :CUSTOM_ID: ORG_MODE
-  :END:
-  :LOGBOOK:
-  CLOCK: [2016-09-22 Thu 13:10]--[2016-09-22 Thu 13:30] =>  0:20
-  CLOCK: [2016-09-22 Thu 12:00]--[2016-09-22 Thu 13:00] =>  1:00
-  CLOCK: [2016-08-30 Tue 08:10]--[2016-08-30 Tue 08:30] =>  0:20
-  CLOCK: [2016-08-30 Tue 07:40]--[2016-08-30 Tue 08:05] =>  0:25
-  CLOCK: [2016-08-29 Mon 07:30]--[2016-08-29 Mon 08:20] =>  0:50
-  CLOCK: [2016-08-26 Fri 08:25]--[2016-08-26 Fri 08:50] =>  0:25
-  CLOCK: [2016-08-25 Thu 08:35]--[2016-08-25 Thu 08:50] =>  0:15
-  :END:
+:PROPERTIES:
+:CUSTOM_ID: ORG_MODE
+:END:
+:LOGBOOK:
+CLOCK: [2016-11-17 Thu 08:00]
+CLOCK: [2016-09-22 Thu 13:10]--[2016-09-22 Thu 13:30] =>  0:20
+CLOCK: [2016-09-22 Thu 12:00]--[2016-09-22 Thu 13:00] =>  1:00
+CLOCK: [2016-08-30 Tue 08:10]--[2016-08-30 Tue 08:30] =>  0:20
+CLOCK: [2016-08-30 Tue 07:40]--[2016-08-30 Tue 08:05] =>  0:25
+CLOCK: [2016-08-29 Mon 07:30]--[2016-08-29 Mon 08:20] =>  0:50
+CLOCK: [2016-08-26 Fri 08:25]--[2016-08-26 Fri 08:50] =>  0:25
+CLOCK: [2016-08-25 Thu 08:35]--[2016-08-25 Thu 08:50] =>  0:15
+:END:
 
 There we are! That's really the crux of this file! Configuring Org Mode is very complex. The various configurations are organized like the [[info:Org][Org Mode Manual]].
 
@@ -640,6 +641,7 @@ See also
 
 #+BEGIN_SRC emacs-lisp
   (setq org-src-fontify-natively t)
+  (setq org-src-window-setup 'other-window)
 #+END_SRC
 
 *** [[info:Org#Evaluating code blocks][Evaluating code blocks]]
@@ -848,6 +850,7 @@ This requires the =ido-ubiquitous= package. I will start using this functionalit
 
 * AUCTeX and RefTeX
   :LOGBOOK:
+  CLOCK: [2016-11-17 Thu 07:50]--[2016-11-17 Thu 08:00] =>  0:10
   CLOCK: [2016-06-03 Fri 08:30]--[2016-06-03 Fri 08:50] =>  0:20
   CLOCK: [2016-06-02 Thu 07:20]--[2016-06-02 Thu 09:00] =>  1:40
   CLOCK: [2016-05-25 Wed 08:10]--[2016-05-25 Wed 08:50] =>  0:40
