Use activate-input-method rather than toggle-input-method.

--- a/sb-init.org
+++ b/sb-init.org
@@ -49,6 +49,7 @@ Use UTF-8 preferably.
 
 ** Input method
 :LOGBOOK:
+CLOCK: [2016-11-21 Mon 08:30]--[2016-11-21 Mon 09:00] =>  0:30
 CLOCK: [2016-11-17 Thu 07:15]--[2016-11-17 Thu 07:35] =>  0:20
 CLOCK: [2016-11-13 Sun 08:50]--[2016-11-13 Sun 09:10] =>  0:20
 CLOCK: [2016-11-12 Sat 20:45]--[2016-11-12 Sat 21:00] =>  0:15
@@ -69,8 +70,10 @@ In case this is not sufficient, it is possible to set up a minor mode, see
 
 #+BEGIN_SRC emacs-lisp
   (set-input-method 'rfc1345)
-  (add-hook 'org-mode-hook 'toggle-input-method)
-  (add-hook 'text-mode-hook 'toggle-input-method)
+  (defun sb-activate-input-method ()
+    (activate-input-method default-input-method))
+  (add-hook 'text-mode-hook 'sb-activate-input-method)
+  (add-hook 'org-mode-hook 'sb-activate-input-method)
 #+END_SRC
 
 ** A_FAIRE À classer
